--- a/Gruppkontrakt/gruppkontrakt_grupp10.qmd
+++ b/Gruppkontrakt/gruppkontrakt_grupp10.qmd
@@ -10,7 +10,7 @@ execute:
 ### Studieförutsättningar
 
 Jacob Widaeus: Jag kommer arbeta på kursen under vardagskvällar. Dagtid till vardags arbetar jag. Jag har kunskap av R, git, python och statistik sedan tidigare.\
-Karl Wärnberg:\
+Karl Wärnberg: Jag kommer arbeta på vardagskvällar och helger. 21-28/9 (vecka 39) är jag bortrest. Jag har ingen erfarenhet av R, Git eller python. Jag har mycket begränsad erfarenhet av statistik och programmering. 
 Rozh Kader:
 
 ### På vilket sätt vill vi hjälpas åt i studierna?
