--- a/block2/Block_2.qmd
+++ b/block2/Block_2.qmd
@@ -119,14 +119,14 @@ plot(radier, areor)
 
 3.6. Bind ihop punkterna i grafen med en linje Tips: sid 8 ISwR
 
+3.7. Klistra in den resulterande grafen här. Kopiera grafen med copy paste, eller i Windows RGui klicka på kamerasymbolen uppe till höger, eller välj File/copy to the clipboard.
+
 ```{r}
 plot(radier, areor)
 lines(radier, areor, col = "blue")
 ```
 
 Tips: använd pil uppåt för att hämta tillbaka kommandon bakåt i historien, du kan redigera dessa och på så sätt slippa skriva om tex långa variabelnamn.
-
-3.7. Klistra in den resulterande grafen här. Kopiera grafen med copy paste, eller i Windows RGui klicka på kamerasymbolen uppe till höger, eller välj File/copy to the clipboard.
 
 Olika typer av objekt.
 
@@ -139,40 +139,74 @@ vector, matrix, factor, list, data.frame
 Skapa ett antal vector med några olika funktioner
 
 4.1. fyll V1 med talen 1, 2, 3, 3, 6, 17, 23, 12, 32, använd funktionen c()
+```{r}
+V1 <- c(1, 2, 3, 3, 6, 17, 23, 12, 32)
+```
 
 4.2. fyll V2 med alla jämna tal mellan 2 och 100. Använd funktionen seq()
+```{r}
+V2 <- seq(2, 100, by = 2)
+```
 
 4.3. fyll V3 med alla heltal mellan 1 och 250. Använd funktionen :
+```{r}
+V1 <- 1:250
+```
 
 Tips: Vad händer som du skriver 1:250 i prompten?1:250
 
 4.4. fyll kundlista_radnamn med orden namn, adress, email, telefonnummer. Varför är det viktigt att använda ” ” eller ’ ’ här? Använd funktionen c()
+```{r}
+kundlista_radnamn <- c("namn", "adress", "email", "telefonnummer")
+```
 
 4.5. fyll kunder200 med orden i kundlista_radnamn 200 gånger efter varandra med funktionen rep()
+```{r}
+kunder200 <- rep(kundlista_radnamn, 200)
+```
 
 Kopiera endast in några rader här som svar när du printar ut kunder200
+```{r}
+head(kunder200, 12)
+```
 
-4.  
-
-    6.  plocka ut andra ordet i kunder200 med hjälp av funktionen \[\]
+4.6.  plocka ut andra ordet i kunder200 med hjälp av funktionen \[\]
+```{r}
+kunder200[2]
+```
 
 4.7. letters är en inbyggt vector. Printa ut innehållet i letters.
+```{r}
+letters
+```
 
 (Printa ut betyder i detta fall att R skriver i prompten)
 
 4.8. kontrollera hur många bokstäver som ingår i letters med funktionen length()
+```{r}
+length(letters)
+```
 
 4.9. printa bokstäverna c, d, e. använd letters och funktionerna \[\] och :
+```{r}
+letters[3:5]
+```
 
 Tips: Vad händer om du skriver letters\[20:23\]
 
 4.10. Fyll abc med bokstäverna a, b, c , a, b, c, a, b, c. använd letters och funktionerna rep(), \[\]
 
+```{r}
+abc <- rep(letters[1:3], 3)
+```
+
 4.11. Undersök funktionen sample(letters, 5, replace=TRUE) Skriv kort här vad sample() gör.
+Sample tar ett slumpässigt urval ur vektorn, i detta fall 5, och med utbytbarhet.
 
 du kan även läsa ?sample()
 
 4.12. testa att köra sample(letters, 5, replace=TRUE) igen. Fick du samma resultat?
+Nej
 
 Om man behöver kontrollera vilka slumptal R genererar, till exempel som när man samarbetar om en inlämningsuppgift och behöver kunna reproducera resultaten, så kan man ställa in ett så kallat seed med funktionen set.seed()
 
@@ -193,7 +227,18 @@ sample(letters, 5, replace=TRUE)
 sample(letters, 5, replace=TRUE)
 
 Klipp in och kommentera resultatet här. Lägg märke till att set.seed() anger en startpunkt för en serie av slumpningar.
+```{r}
+gruppnummer <- 10
+set.seed(gruppnummer)
 
+sample(letters, 5, replace = TRUE)
+sample(letters, 5, replace = TRUE)
+
+set.seed(gruppnummer)
+
+sample(letters, 5, replace = TRUE)
+sample(letters, 5, replace = TRUE)
+```
 Jag kommer att påminna er att ställa in seed i vissa inlämningsuppgifterna eftersom den rättande läraren ska kunna reproducera era beräkningar snabbt och fullständigt.
 
 5.  Att söka igenom och justera data.
@@ -203,6 +248,13 @@ Jag kommer att påminna er att ställa in seed i vissa inlämningsuppgifterna ef
 Använd funktionerna sample() och : (Tips: vad sägs om 1:6)
 
 Skapa ett misstag genom att sätta det omöjliga utfallet 66 i position 12 i dice
+```{r}
+kast = 400
+
+kast_utfall <- sample(1:6, kast, replace = TRUE)
+
+kast_utfall[12] <- 66
+```
 
 Tips: sid 21 ISwR, Indexing
 
