--- a/Gruppkontrakt/gruppkontrakt_grupp10.qmd
+++ b/Gruppkontrakt/gruppkontrakt_grupp10.qmd
@@ -19,6 +19,9 @@ Karl Wärnberg: Jag kommer arbeta på vardagskvällar och helger. 21-28/9 (vecka
 Alexander Ramirez: Då jag pluggar på heltid samt jobbet utanför kursen så kommer mitt pluggande ske främst på vardagskvällar och helger. Jag har tidigare erfarenhet av programmering (Java, SQL, Python) och Github men inte R eller statistik verktyg. 
 \
 
+Rozh Kader: Jag har kommer arbeta på helger och kvällar utöver mitt heltidsarbete. Jag har ingen formell erfarenhet av programmering, R, GitHub eller statistik men hittar runt i Rstudio. 
+\
+
 ### På vilket sätt vill vi hjälpas åt i studierna?
 
 Vi vill hjälpas åt genom att regelbundet kommunicera och dela med oss av våra kunskaper och erfarenheter. Vi kan använda oss av gemensamma studiegrupper, där vi kan diskutera och lösa problem tillsammans. Vi kan också dela med oss av resurser och studiematerial som kan vara till nytta för alla i gruppen. Genom att hjälpa varandra kan vi öka förståelsen och effektiviteten i våra studier.
@@ -53,3 +56,6 @@ Karl Wärnberg
 
 \
 Alexander Ramirez
+
+\
+Rozh Kader
