--- a/Gruppkontrakt/gruppkontrakt_grupp10.qmd
+++ b/Gruppkontrakt/gruppkontrakt_grupp10.qmd
@@ -22,6 +22,9 @@ Alexander Ramirez: Då jag pluggar på heltid samt jobbet utanför kursen så ko
 Rozh Kader: Jag har kommer arbeta på helger och kvällar utöver mitt heltidsarbete. Jag har ingen formell erfarenhet av programmering, R, GitHub eller statistik men hittar runt i Rstudio. 
 \
 
+Beata Rosenberg: Jag kommer arbeta vardagskvällar. Jag har erfarenhet av R, Python och statistik sedan tidigare, med varierande kunskap. Känner till GitHub sedan tidigare och kan navigera det men ingen praktisk erfarenhet av att använda det själv.
+\
+
 ### På vilket sätt vill vi hjälpas åt i studierna?
 
 Vi vill hjälpas åt genom att regelbundet kommunicera och dela med oss av våra kunskaper och erfarenheter. Vi kan använda oss av gemensamma studiegrupper, där vi kan diskutera och lösa problem tillsammans. Vi kan också dela med oss av resurser och studiematerial som kan vara till nytta för alla i gruppen. Genom att hjälpa varandra kan vi öka förståelsen och effektiviteten i våra studier.
@@ -59,3 +62,6 @@ Alexander Ramirez
 
 \
 Rozh Kader
+
+\
+Beata Rosenberg
