--- a/block2/Block_2.qmd
+++ b/block2/Block_2.qmd
@@ -1,7 +1,7 @@
 ---
 title: "Inlämningsuppgift block 2 – funktioner, objekt, grafer, import av data"
 author: "Statistiska Metoder med R"
-format: docx
+format: pdf
 echo: true
 ---
 
